--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animated": "^1.1.2"
